<resources>
    <string name="app_name">Hotels</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_hotel">Об отеле</string>
    <string name="choose_number">К выбору номера</string>
    <string name="conveniences">Удобства</string>
    <string name="the_most_necessary">Самое необходимое</string>
    <string name="what_is_included">Что включено</string>
    <string name="what_is_not_included">Что не включено</string>
    <string name="room_more">Подробнее о номере</string>
</resources>