<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_surface_color"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_hotel_images"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:ignore="RtlSymmetry" />


        <LinearLayout
            android:id="@+id/ll_dots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-50dp"
            android:background="@drawable/background_mid"
            android:orientation="horizontal">

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/background_top"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_hotel_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/background_rating"
                android:fontFamily="@font/sf_display_pro"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:textColor="@color/rating_color"
                android:textSize="16sp"
                app:drawableTint="@color/rating_color"
                app:drawableStartCompat="@drawable/ic_star" />

            <TextView
                android:id="@+id/tv_hotel_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/sf_display_pro"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:text="Steigenberger Makadi" />

            <TextView
                android:id="@+id/tv_hotel_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/sf_display_pro"
                android:textColor="@color/address_color"
                android:textSize="14sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_hotel_minimal_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_display_pro"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    tools:text="от 134 673 ₽" />

                <TextView
                    android:id="@+id/tv_hotel_price_for_it"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_display_pro"
                    android:paddingStart="8dp"
                    android:textSize="16sp"
                    tools:text="за тур с перелётом"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/background_mid"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_display_pro"
                android:text="@string/about_hotel"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/cg_hotel_peculiarities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_hotel_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_display_pro"
                android:textColor="@color/black_90a"
                android:textSize="16sp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="15dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/second_surface_color"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="16dp">


                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@drawable/emoji_happy"
                            tools:ignore="ContentDescription" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:paddingStart="16dp"
                            tools:ignore="RtlSymmetry">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/sf_display_pro"
                                android:text="@string/conveniences"
                                android:textColor="#2C3035"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/sf_display_pro"
                                android:text="@string/the_most_necessary"
                                android:textColor="@color/grey"
                                android:textSize="14sp"
                                tools:ignore="TextContrastCheck" />

                        </LinearLayout>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_arrow_next"
                            app:tint="@color/dark_grey"
                            tools:ignore="ContentDescription" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/dash" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp">


                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@drawable/tick_square"
                            tools:ignore="ContentDescription" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:paddingStart="16dp"
                            tools:ignore="RtlSymmetry">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/sf_display_pro"
                                android:text="@string/what_is_included"
                                android:textColor="#2C3035"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/sf_display_pro"
                                android:text="@string/the_most_necessary"
                                android:textColor="@color/grey"
                                android:textSize="14sp"
                                tools:ignore="TextContrastCheck" />

                        </LinearLayout>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_arrow_next"
                            app:tint="#2C3035"
                            tools:ignore="ContentDescription" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#26828796" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="16dp">


                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@drawable/close_square"
                            tools:ignore="ContentDescription" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:paddingStart="16dp"
                            tools:ignore="InefficientWeight,RtlSymmetry">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/sf_display_pro"
                                android:text="@string/what_is_not_included"
                                android:textColor="#2C3035"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/sf_display_pro"
                                android:text="@string/the_most_necessary"
                                android:textColor="@color/grey"
                                android:textSize="14sp"
                                tools:ignore="TextContrastCheck" />

                        </LinearLayout>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_arrow_next"
                            app:tint="#2C3035"
                            tools:ignore="ContentDescription" />

                    </LinearLayout>


                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="16dp">

            <Button
                style="@style/My.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_number"
                tools:ignore="TextContrastCheck,VisualLintButtonSize" />
        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>